<resources>
    <string name="app_name">Store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment1">Categories</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="registration">Registration</string>
    <string name="wellcome">Welcome to</string>
    <string name="project">Our Project</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Your Nickname</string>
    <string name="promt_password">Password</string>
    <string name="search">Search item...</string>
    <string name="popular">Popular Product</string>
    <string name="address">address</string>
    <string name="view">View All</string>
    <string name="example">ExampleText</string>
    <string name="key">AIzaSyD5obQEPK9Cb7Nq89sJbVWl9tcp6vXgosE</string>
    <string name="Lorem">Your perfect pack for everyday use and walks in the forest. Stash your laptop (up to 15 inches) in the padded sleeve, your everyday</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>