<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment"
    android:background="@color/white"
    android:layout_marginTop="60dp">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:elevation="3dp"
            android:id="@+id/search_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/search"
            android:padding="13dp"
            android:background="@drawable/buttons_corner"
            android:drawableLeft="@drawable/ic_baseline_search_24"
            android:drawablePadding="8dp"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_main_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            tools:itemCount="4"
            tools:listitem="@layout/activity_categories"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:weightSum="2"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/comicneue"
                android:text="@string/popular"
                android:textColor="@color/black"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/comicneue"
                android:text="@string/view"
                android:textColor="@color/purple_my"
                android:textSize="18sp"
                android:gravity="end"
                android:layout_marginRight="8dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_sub_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:orientation="horizontal"
                tools:itemCount="4"
                tools:listitem="@layout/activity_item_popular" />
        </LinearLayout>

    </LinearLayout>




</ScrollView>