<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity"
    android:background="@color/purple_my">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/ic_reg_svg"
        android:layout_marginTop="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:background="@drawable/login_shape"
        android:orientation="vertical"
        android:padding="35sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comicneue"
            android:text="@string/signUp"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/login_shape"
            android:orientation="vertical"
            android:padding="35sp">

            <EditText
                android:id="@+id/name_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/prompt_name"
                android:minHeight="48dp"
                android:selectAllOnFocus="true"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/reg_img"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".8" />

            <EditText
                android:id="@+id/email_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/prompt_email"
                android:minHeight="48dp"
                android:selectAllOnFocus="true"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/reg_img"
                app:layout_constraintEnd_toEndOf="parent"
                android:inputType="textEmailAddress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".8" />

            <EditText
                android:id="@+id/password_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/promt_password"
                android:minHeight="48dp"
                android:selectAllOnFocus="true"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/reg_img"
                app:layout_constraintEnd_toEndOf="parent"
                android:inputType="textPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".8" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="35sp"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <Button
            android:id="@+id/sign_up"
            android:layout_width="192dp"
            android:layout_height="52dp"
            android:text="@string/signUp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/button_color"
            android:textColor="@color/white"
            android:fontFamily="@font/josefinsans_extralight"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Already have an account?"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in"
            android:fontFamily="@font/josefinsans_extralight"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/sign_in"
            android:layout_width="60dp"
            android:layout_height="20dp"
            android:text="Sign In"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.183"
            app:layout_constraintStart_toEndOf="@+id/textView"
            android:textColor="@color/purple_700"
            android:fontFamily="@font/gideon_roman"/>

    </LinearLayout>
</RelativeLayout>